--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -2,8 +2,9 @@
 <div class="row">
     <div class="container">
         <div class="row mb-4">
-            <a class="text-primary back-pages"
-               [routerLink]="['/admin/pages']"><i class="fal fa-arrow-circle-left"></i>&nbsp;All Pages
+            <a class="btn btn-default"
+               [routerLink]="['/admin/pages']">
+                <i class="fal fa-arrow-circle-left"></i>&nbsp;All Pages
             </a>
         </div>
     </div>
