--- a/src/app/components/core/navbar/navbar.component.html
+++ b/src/app/components/core/navbar/navbar.component.html
@@ -144,7 +144,7 @@
                         </a>
                         <a class="dropdown-item"
                            *ngIf="newsPage.isExtURL"
-                           [routerLink]="['/news/', newsPage.url]">
+                           [routerLink]="['/press-releases/', newsPage.url]">
                             {{ newsPage.title }}
                         </a>
                     </span>
