--- a/src/app/components/pages/news-and-media/news-and-media.component.html
+++ b/src/app/components/pages/news-and-media/news-and-media.component.html
@@ -60,7 +60,7 @@
     </div>
 </div>
 
-<div *ngIf="pressRelease$">
+<div *ngIf="pressRelease$ && !page">
     <img [src]="banner" class="bannerPhotoURL">
 
     <div class="container">
