Updated press-releases as a child or news for organization and SEO

--- a/src/app/components/admin/admin-press-release/admin-press-release-item/admin-press-release-item.component.html
+++ b/src/app/components/admin/admin-press-release/admin-press-release-item/admin-press-release-item.component.html
@@ -1,5 +1,5 @@
 <!-- * ADMIN-PRESS-RELEASE-ITEM * -->
-<h3><a [routerLink]="['/blogs/', pressRelease.url]">{{ pressRelease.title}}</a></h3>
+<h3><a [routerLink]="['/news/press-releases/', pressRelease.url]">{{ pressRelease.title}}</a></h3>
 <p class="text-light">
     <small>{{ pressRelease.publishOn | date:'fullDate' }}</small>
 </p>
