Updated news-and-media categories to be news to mimick the actual site url

--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -127,7 +127,7 @@
                             <option>attendee-planning</option>
                             <option>education</option>
                             <option>exhibitor-information</option>
-                            <option>news-and-media</option>
+                            <option>news</option>
                             <option>presenters</option>
                         </select>
                         <p class="help-block alert alert-warning text-center mt-1"
