--- a/src/app/components/admin/admin-press-release/admin-press-release-edit/admin-press-release-edit.component.html
+++ b/src/app/components/admin/admin-press-release/admin-press-release-edit/admin-press-release-edit.component.html
@@ -15,7 +15,7 @@
         <div class="card mb-5">
             <div class="card-body">
                 <div class="card-title">
-                    <h2>New PressRelease</h2>
+                    <h2>Edit Press Release</h2>
                 </div>
                 <ng-template #loading>
                     <div class="text-center text-dark p-5">
