--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -82,18 +82,18 @@
         *ngIf="isLoggedIn">
         <a class="sidenav-link sidenav-toggle" (click)="onShowPressReleaseToggle()">
             <i class="sidenav-icon ion ion-md-speedometer"></i>
-            <div><i class="fal fa-newspaper"></i>&nbsp;Press Releases</div>
+            <div><i class="fal fa-bullhorn"></i>&nbsp;Press Releases</div>
         </a>
 
         <ul class="sidenav-menu">
             <li class="sidenav-item sub-item">
                 <a [routerLink]="['/admin/press-releases']" class="sidenav-link">
-                    <div><i class="fal fa-newspaper"></i>&nbsp;All PR</div>
+                    <div><i class="fal fa-bullhorn"></i>&nbsp;All PR</div>
                 </a>
             </li>
             <li class="sidenav-item sub-item">
                 <a [routerLink]="['/admin/press-releases/new']" class="sidenav-link">
-                    <div><i class="fal fa-newspaper"></i>&nbsp;New PR</div>
+                    <div><i class="fal fa-bullhorn"></i>&nbsp;New PR</div>
                 </a>
             </li>
         </ul>
