--- a/src/app/components/pages/education/education.component.html
+++ b/src/app/components/pages/education/education.component.html
@@ -10,7 +10,7 @@
         <div class="container">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a [routerLink]="['/home']">Register</a>
+                    <div class="text-capitalize text-decoration-none">Education</div>
                 </li>
                 <li class="breadcrumb-item active">{{page.title}}</li>
             </ol>
