Breadcrumb and press-release cleanup

--- a/src/app/components/pages/news-and-media/news-and-media.component.html
+++ b/src/app/components/pages/news-and-media/news-and-media.component.html
@@ -79,8 +79,8 @@
     </div>
 
 
-    <div class="row">
-        <div class="container-fluid">
+    <div class="row mb-5">
+        <div class="container-fluid" style="max-width:1200px;">
             <ddw-admin-press-release-item
                     *ngFor="let prEl of pressReleases"
                     [pressRelease]="prEl">
