--- a/src/app/components/admin/admin-core/admin-reset-password/admin-reset-password.component.html
+++ b/src/app/components/admin/admin-core/admin-reset-password/admin-reset-password.component.html
@@ -1,18 +1,18 @@
 <!-- * ADMIN-RESET-PASSWORD * -->
 <div class="row mb-5 mt-5">
-  <div class="col-md-6 mx-auto">
-    <div class="card">
-      <div class="card-body">
-        <h1 class="text-center text-secondary pb-4 pt-3">
+    <div class="col-md-6 mx-auto">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="text-center text-secondary pb-4 pt-3">
                     <span class="text-dark">
                <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
                     alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
                         <i class="fa fa-envelope-open"></i>&nbsp;Admin
                     </span> Reset Password
-        </h1>
-      </div>
+                </h1>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 
@@ -32,7 +32,9 @@
                         </div>
 
                         <button type="submit"
-                                class="btn btn-primary"><i class="fa fa-share-square"></i>&nbsp;Send
+                                class="btn btn-primary"
+                                [disabled]="!resetForm.valid">
+                            <i class="fa fa-share-square"></i>&nbsp;Send
                         </button>
                     </form>
                 </div>
