--- a/src/app/components/core/not-found/not-found.component.html
+++ b/src/app/components/core/not-found/not-found.component.html
@@ -1,3 +1,25 @@
-<p>
-  not-found works!
-</p>
+<!-- * PAGE-NOT-FOUND * -->
+<div class="row mb-5 mt-5">
+    <div class="col-md-6 mx-auto">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="text-center text-secondary pb-4 pt-3">
+                    <span class="text-dark">
+               <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
+                    alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
+                        <i class="fa fa-exclamation-triangle"></i>&nbsp;
+                    </span> Page Not Found
+                </h1>
+                <p class="text-center">Sorry, the page you are looking for could not be found.</p>
+                <p class="text-center mt-4">
+                    <a [routerLink]="['/home']" class="btn btn-outline-google mt-4 text-decoration-none">
+                        <i class="fa fa-home"></i> Home
+                    </a>
+                </p>
+            </div>
+        </div>
+        <div class="row">
+
+        </div>
+    </div>
+</div>
