--- a/src/app/components/admin/admin-user/admin-user-details/admin-user-details.component.html
+++ b/src/app/components/admin/admin-user/admin-user-details/admin-user-details.component.html
@@ -20,7 +20,7 @@
                          aria-label="Basic example">
                         <a class="btn btn-secondary btn-sm"
                            [routerLink]="['edit']"
-                           *ngIf="isAdmin">
+                           *ngIf="user">
                             <i class="fa fa-pencil"></i>&nbsp;Edit
                         </a>
                         <a class="btn btn-warning btn-sm"
