--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -136,6 +136,66 @@
                         </p>
                     </div>
 
+                    <div class="card bg-lighter mb-3">
+                        <div class="card-body">
+                            <div class="form-group">
+                                <div class="custom-control custom-checkbox">
+                                    <input type="checkbox"
+                                           class="custom-control-input"
+                                           id="isGrandchildPageCheckbox"
+                                           formControlName="isGrandchildPage"
+                                           (click)="toggleIsGrandchildPage()">
+                                    <label class="custom-control-label"
+                                           for="isGrandchildPageCheckbox">Is this page a Grandchild?</label>
+                                </div>
+                            </div>
+
+                            <div class="form-group" *ngIf="isGrandchildPage">
+                                <label for="isGrandchildPage">Grandchild of what page?</label>
+                                <select class="form-control"
+                                        id="isGrandchildPage"
+                                        [class.invalid]="!f.grandchildURL.valid &&
+                                        f.grandchildURL.touched"
+                                        formControlName="grandchildURL">
+                                    <optgroup label="Register">
+                                        <option *ngFor="let page of registerPages$ | async">
+                                            {{ page.url }}
+                                        </option>
+                                    </optgroup>
+                                    <optgroup label="News">
+                                        <option *ngFor="let page of newsPages$ | async">
+                                            {{ page.url }}
+                                        </option>
+                                    </optgroup>
+                                    <optgroup label="Exhibitor Information">
+                                        <option *ngFor="let page of exhibitPages$ | async">
+                                            {{ page.url }}
+                                        </option>
+                                    </optgroup>
+                                    <optgroup label="Education">
+                                        <option *ngFor="let page of edPages$ | async">
+                                            {{ page.url }}
+                                        </option>
+                                    </optgroup>
+                                    <optgroup label="Attendee">
+                                        <option *ngFor="let page of attendeePages$ | async">
+                                            {{ page.url }}
+                                        </option>
+                                    </optgroup>
+                                    <optgroup label="Presenters">
+                                        <option *ngFor="let page of presPages$ | async">
+                                            {{ page.url }}
+                                        </option>
+                                    </optgroup>
+                                </select>
+                                <p class="help-block alert alert-warning text-center mt-1"
+                                   *ngIf="!f.grandchildURL.valid && f.grandchildURL.touched">
+                                    <b>Category</b> is required!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
 
                     <div class="form-group">
                         <label for="sortOrder">Sort Order <br>
@@ -185,7 +245,7 @@
                             <div class="form-group" *ngIf="hasCalendar">
                                 <label for="calendarTitle">Select Calendar or
                                     <a [routerLink]="['/admin/calendar/new']" class="btn btn-sm btn-default">
-                                        <i class="fa fa-calendar-plus"></i>  Create New</a>
+                                        <i class="fa fa-calendar-plus"></i> Create New</a>
                                 </label>
                                 <select class="form-control"
                                         id="calendarTitle"
@@ -297,6 +357,19 @@
                         </p>
                     </div>
 
+
+                    <div class="form-group">
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox"
+                                   class="custom-control-input"
+                                   id="hidden"
+                                   formControlName="hidden">
+                            <label class="custom-control-label"
+                                   for="hidden">Should the page be hidden from the menu?</label>
+                        </div>
+                    </div>
+
+
                     <div class="form-group">
                         <div class="custom-control custom-checkbox">
                             <input type="checkbox"
@@ -304,7 +377,8 @@
                                    id="published"
                                    formControlName="published">
                             <label class="custom-control-label"
-                                   for="published">Publish?</label>
+                                   for="published"><span class="text-danger"><b>Publish</b></span> the page on "Create"? <br>
+                            <small>If so, page will appear according to "Publish On" date.</small></label>
                         </div>
                     </div>
 
