Updated Footer to so that grandchild pages marked as hidden do not render

--- a/src/app/components/core/navbar/navbar.component.html
+++ b/src/app/components/core/navbar/navbar.component.html
@@ -231,7 +231,7 @@
                        aria-label="Search"
                        aria-describedby="search">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondarywaa text-secondary"
+                    <button class="btn btn-outline-secondary text-secondary"
                             type="button"
                             id="search">
                         <i class="far fa-search"></i>
