--- a/src/app/components/core/footer/footer.component.html
+++ b/src/app/components/core/footer/footer.component.html
@@ -36,11 +36,18 @@
     <div class="col-md-2 pl-5">
         <h5>Register</h5>
         <ul>
-            <li *ngFor="let regPage of registerPages$">
-                <a [routerLink]="['/register/', regPage.url]" *ngIf="!regPage.isExtURL">
+            <li *ngFor="let regPage of registerPages">
+                <a [routerLink]="['/register/', regPage.url]"
+                   *ngIf="!regPage.isExtURL && !regPage.isGrandchildPage">
                     {{ regPage.title }}
                 </a>
-                <a [href]="regPage.extURL" target="_blank" *ngIf="regPage.isExtURL">
+                <a [routerLink]="['/register/', regPage.grandchildURL ,regPage.url]"
+                   *ngIf="!regPage.isExtURL && regPage.isGrandchildPage">
+                    {{ regPage.title }}
+                </a>
+                <a [href]="regPage.extURL"
+                   target="_blank"
+                   *ngIf="regPage.isExtURL">
                     {{ regPage.title }}
                 </a>
             </li>
@@ -49,11 +56,18 @@
     <div class="col-md-2">
         <h5>Attendee Planning</h5>
         <ul>
-            <li *ngFor="let attPage of attendeePlanningPages$">
-                <a [routerLink]="['/attendee-planning/', attPage.url]" *ngIf="!attPage.isExtURL">
+            <li *ngFor="let attPage of attendeePlanningPages">
+                <a [routerLink]="['/attendee-planning/', attPage.url]"
+                   *ngIf="!attPage.isExtURL && !attPage.isGrandchildPage">
                     {{ attPage.title }}
                 </a>
-                <a [href]="attPage.extURL" target="_blank" *ngIf="attPage.isExtURL">
+                <a [routerLink]="['/attendee-planning/', attPage.grandchildURL, attPage.url]"
+                   *ngIf="!attPage.isExtURL && attPage.isGrandchildPage">
+                    {{ attPage.title }}
+                </a>
+                <a [href]="attPage.extURL"
+                   target="_blank"
+                   *ngIf="attPage.isExtURL">
                     {{ attPage.title }}
                 </a>
             </li>
@@ -64,11 +78,18 @@
             Education
         </h5>
         <ul>
-            <li *ngFor="let edPage of educationPages$">
-                <a [routerLink]="['/education/', edPage.url]" *ngIf="!edPage.isExtURL">
+            <li *ngFor="let edPage of educationPages">
+                <a [routerLink]="['/education/', edPage.url]"
+                   *ngIf="!edPage.isExtURL && !edPage.isGrandchildPage">
                     {{ edPage.title }}
                 </a>
-                <a [href]="edPage.extURL" target="_blank" *ngIf="edPage.isExtURL">
+                <a [routerLink]="['/education/', edPage.grandchildURL, edPage.url]"
+                   *ngIf="!edPage.isExtURL && edPage.isGrandchildPage">
+                    {{ edPage.title }}
+                </a>
+                <a [href]="edPage.extURL"
+                   target="_blank"
+                   *ngIf="edPage.isExtURL">
                     {{ edPage.title }}
                 </a>
             </li>
@@ -77,11 +98,18 @@
     <div class="col-md-2">
         <h5>Exhibitor Information</h5>
         <ul>
-            <li *ngFor="let exhPage of exhibitorInfoPages$">
-                <a [routerLink]="['/exhibitor-information/', exhPage.url]" *ngIf="!exhPage.isExtURL">
+            <li *ngFor="let exhPage of exhibitorInfoPages">
+                <a [routerLink]="['/exhibitor-information/', exhPage.url]"
+                   *ngIf="!exhPage.isExtURL && !exhPage.isGrandchildPage">
                     {{ exhPage.title }}
                 </a>
-                <a [href]="exhPage.extURL" target="_blank" *ngIf="exhPage.isExtURL">
+                <a [routerLink]="['/exhibitor-information/', exhPage.grandchildURL, exhPage.url]"
+                   *ngIf="!exhPage.isExtURL && exhPage.isGrandchildPage">
+                    {{ exhPage.title }}
+                </a>
+                <a [href]="exhPage.extURL"
+                   target="_blank"
+                   *ngIf="exhPage.isExtURL">
                     {{ exhPage.title }}
                 </a>
             </li>
@@ -90,11 +118,17 @@
     <div class="col-md-2">
         <h5>News &amp; Media</h5>
         <ul>
-            <li *ngFor="let newsPage of newsAndMediaPages$">
-                <a [routerLink]="['/news/', newsPage.url]" *ngIf="!newsPage.isExtURL">
+            <li *ngFor="let newsPage of newsAndMediaPages">
+                <a [routerLink]="['/news/', newsPage.url]"
+                   *ngIf="!newsPage.isExtURL && !newsPage.isGrandchildPage">
                     {{ newsPage.title }}
                 </a>
-                <a [routerLink]="['/news/', newsPage.extURL]" *ngIf="newsPage.isExtURL">
+                <a [routerLink]="['/news/', newsPage.grandchildURL, newsPage.url]"
+                   *ngIf="!newsPage.isExtURL && newsPage.isGrandchildPage">
+                    {{ newsPage.title }}
+                </a>
+                <a [routerLink]="['/news/', newsPage.extURL]"
+                   *ngIf="newsPage.isExtURL">
                     {{ newsPage.title }}
                 </a>
             </li>
@@ -104,11 +138,18 @@
     <div class="col-md-2 pr-5">
         <h5>Presenters</h5>
         <ul>
-            <li *ngFor="let presPage of presentersPages$">
-                <a [routerLink]="['/presenters/', presPage.url]" *ngIf="!presPage.isExtURL">
+            <li *ngFor="let presPage of presentersPages">
+                <a [routerLink]="['/presenters/', presPage.url]"
+                   *ngIf="!presPage.isExtURL && !presPage.isGrandchildPage">
                     {{ presPage.title }}
                 </a>
-                <a [href]="presPage.extURL" target="_blank" *ngIf="presPage.isExtURL">
+                <a [routerLink]="['/presenters/', presPage.grandchildURL, presPage.url]"
+                   *ngIf="!presPage.isExtURL && presPage.isGrandchildPage">
+                    {{ presPage.title }}
+                </a>
+                <a [href]="presPage.extURL"
+                   target="_blank"
+                   *ngIf="presPage.isExtURL">
                     {{ presPage.title }}
                 </a>
             </li>
