Fixed issue with deployment(only) where users were not being created in db and localstorage

--- a/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
@@ -21,7 +21,7 @@
                         [routerLink]="['/admin/pages/new']"><i class="fa fa-file-plus"></i>&nbsp; New Page
                 </button>
             </li>
-            <li class="nav-item" *ngIf="user">
+            <li class="nav-item" *ngIf="user && isLoggedIn">
                 <a class="nav-link"
                    [routerLink]="['/admin/users/', user.$key ]">
                     <img [src]="user.photoURL"
