Refactored local storage settings

--- a/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.html
+++ b/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.html
@@ -17,7 +17,7 @@
 
 <div class="row mb-4">
     <div class="container">
-        <a class="text-primary back-pages"
+        <a class="btn btn-default"
            [routerLink]="['/admin/pages']"><i class="fal fa-arrow-circle-left"></i>&nbsp;All Pages
         </a>
     </div>
