--- a/src/app/components/admin/admin-core/admin-meta/admin-meta.component.html
+++ b/src/app/components/admin/admin-core/admin-meta/admin-meta.component.html
@@ -16,7 +16,9 @@
 
 <div class="row m-4 pl-5">
     <div class="container">
-        <a [routerLink]="['/admin/settings']" class="back-pages"><i class="fal fa-arrow-circle-left"></i>&nbsp;Settings</a>
+        <a [routerLink]="['/admin/settings']" class="btn btn-default">
+            <i class="fal fa-arrow-circle-left"></i>&nbsp;Settings
+        </a>
     </div>
 </div>
 
