--- a/src/app/components/admin/admin-user/admin-user-new/admin-user-new.component.html
+++ b/src/app/components/admin/admin-user/admin-user-new/admin-user-new.component.html
@@ -2,8 +2,9 @@
 <div class="row">
     <div class="container">
         <div class="row mb-4">
-            <a class="text-primary back-users"
-               [routerLink]="['/admin/users']"><i class="fal fa-arrow-circle-left"></i>&nbsp;All Users
+            <a class="btn btn-default"
+               [routerLink]="['/admin/users']">
+                <i class="fal fa-arrow-circle-left"></i>&nbsp;All Users
             </a>
         </div>
     </div>
