--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -23,12 +23,18 @@
                         <label>Title</label>
                         <input type="text"
                                class="form-control"
+                               [(ngModel)]="title"
                                [class.invalid]="!f.title.valid && f.title.touched"
                                formControlName="title">
                         <p class="help-block alert alert-warning text-center mt-1"
                            *ngIf="!f.title.valid && f.title.touched">
                             <b>Title</b> is required!
                         </p>
+                        <p class="help-block alert alert-warning text-center mt-1"
+                           *ngIf="titleNotValid">
+                            There is already a page with this title. Please edit that page or rename this page.
+                        </p>
+
                     </div>
 
 
