--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -122,6 +122,14 @@
         </ul>
     </li>
 
+    <!-- * Home Page * -->
+    <li class="sidenav-item" *ngIf="isLoggedIn">
+        <a [routerLink]="['/admin/home']" class="sidenav-link">
+            <i class="sidenav-icon ion ion-md-quote"></i>
+            <div><i class="fal fa-home"></i>&nbsp;Home Page</div>
+        </a>
+    </li>
+
     <!-- * Cards * -->
     <li class="sidenav-item" *ngIf="isLoggedIn">
         <a [routerLink]="['/admin/cards']" class="sidenav-link">
