Home page banner info now dynamically loaded

--- a/src/app/components/admin/admin-home-page/admin-home-page.component.html
+++ b/src/app/components/admin/admin-home-page/admin-home-page.component.html
@@ -99,7 +99,7 @@
                 </ng-template>
                 <div class="card">
                     <div class="card-body">
-                        <h3 class="card-title">Home Page Sections</h3>
+                        <h4 class="card-title">Banner Text</h4>
                         <form [formGroup]="homePageForm"
                               (ngSubmit)="onHomePageSubmit(homePageForm.value)"
                               *ngIf="homePage; else homeLoading">
