--- a/src/app/components/core/home/home.component.html
+++ b/src/app/components/core/home/home.component.html
@@ -7,10 +7,11 @@
         <div class="container text-center">
             <div class="col-auto offset-md-1 offset-sm-0">
                 <div class="header-content">
-                    <h1 class="title">{{ title }}</h1>
-                    <h1 class="subtitle">{{ subtitle }} <span class="forTime">{{ forTime }}</span></h1>
-                    <h2 class="loc-date">{{ subheaderLoc }}&nbsp;&nbsp;&nbsp;&nbsp;<span class="forTime">
-                    <i class="fa fa-calendar"></i></span>&nbsp;&nbsp;{{ subheaderDate }}
+                    <h1 class="title">{{ homePage.title }}</h1>
+                    <h1 class="subtitle">{{ homePage.subtitle }} <span class="forTime">{{ homePage.forTime }}</span>
+                    </h1>
+                    <h2 class="loc-date">{{ homePage.subheaderLoc }}&nbsp;&nbsp;&nbsp;&nbsp;<span class="forTime">
+                    <i class="fa fa-calendar"></i></span>&nbsp;&nbsp;{{ homePage.subheaderDate }}
                     </h2>
 
                     <div class="row">
